# edmtgreen

./: .gitignore  LICENSE  README.md  __init__.py  _auth.py  _client.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
edmtgreen/: _exceptions.py
tests/: conftest.py  test_auth.py  test_exceptions.py  test_tabular_endpoints.py  test_uploads.py  test_workflows.py
